name:                hnem
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Frefreak/hnem#readme
license:             BSD3
license-file:        LICENSE
author:              Xiangyu Zhu
maintainer:          frefreak.zxy@gmail.com
copyright:           Copyright 2016 Xiangyu Zhu <frefreak.zxy@gmail.com>
category:            Abstract
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types,
                       Crypto,
                       Constant,
                       Player,
                       Operations,
                       Talker,
                       UI,
                       Fakemain
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , brick
                     , vty
                     , data-default
                     , aeson
                     , transformers
                     , http-conduit
                     , scientific
                     , http-client
                     , connection
                     , time
                     , cryptocipher
                     , http-client-tls
                     , vector
                     , base64-bytestring
                     , bytestring
                     , mtl
                     , lens-aeson
                     , MissingH
                     , text
                     , random
                     , process
                     , hex
                     , temporary
                     , directory
                     , filepath
                     , xdg-basedir
                     , unix

  default-language:    Haskell2010

executable hnem-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hnem

  default-language:    Haskell2010

test-suite hnem-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hnem
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Frefreak/hnem
